   * Add tooltips for columns likely to be shortened (id, event, site)
   * Add Tooltip translations for english and german
   * Add basic game info for Resign/Draw (assign/offer/accept)
   * Add Scrollbar for gamelist
   * Add extensive icons/indicators help
   * Add icon/indicators help button
   * Add binding for ? to access icons/statusindicators help
   * Update help files
- Added "sc_game push copyfast" call that behaves like "sc_game push copy" except there is no memory leak and tags and comments are not copied in the new pushed game.
- Minor bug fixes :
   * tactical game against Phalanx (some info was missing)
   * replacing a game with flags : all flags were not copied (for example tactical flag)
   * error recovery code if the network drops when playing on FICS
   * when deleting the last move of a variation by right clicking on board, the empty variation is removed
   * fixed pgnscid so importing a game over 32 kB does not lead to a segfault (but will output : Fatal error encoding game!)
   * GAME EDITOR : with comment editor opened, browsing a game would flagged it as "to be saved", even if there was no change in NAGS and comment values
   * fixed tooltip display bug on MacOs (thanks to Israel Chauca)
   * when info is available, the first line of engine window displays mate distance
   * in case of engines not configured for some training stuff, added relevant error messages
   * fixes on Tooltips display (max width, better placement, auto hide of the tooltip after few seconds, clicking on a tooltip hides it)
- Annotation : added an option "mark tactical exercises". The tactical flag will be set to the game and a comment with ****d<depth>sc<score>. This option is only available when annotating with an UCI engine.